2003-01-15  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* syncase.scm: Set expansion-eval-closure to
	the-syncase-eval-closure during booting so that variables are
	created in the correct module;
	(define-syntax define-syntax-public eval-when fluid-let-syntax
	identifier-syntax let-syntax letrec-syntax syntax syntax-case
	syntax-rules with-syntax include): Removed definitions (these are
	created from within psyntax.pp).

2003-01-10  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* occam-channel.scm (make-channel): Renamed from channel.
	(make-timer): New function.

	* Makefile.am (ice9_sources): Added occam-channel.scm.

	* occam-channel.scm: New file.  Implements occam-like channels.

2002-12-28  Neil Jerram  <neil@ossau.uklinux.net>

	* boot-9.scm (module-defined-hook): New hook, run whenever a new
	module is defined.
	(process-define-module): Run this hook.

2002-12-18  Mikael Djurfeldt  <mdj@kvast.blakulla.net>

	* threads.scm: Removed bogus definition of future-ref.

2002-12-15  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* threads.scm (par-map, par-for-each): Reimplemented using
	joing-thread.
	(parallel): Reimplemented using futures.
	(n-par-map, n-for-each): New procedures.

2002-12-12  Marius Vollmer  <mvo@zagadka.ping.de>

	* optargs.scm (improper-list-copy): New.
	(parse-arglist): Use it instead of list-copy.

2002-12-09  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* threads.scm (letpar): New macro.

2002-12-08  Rob Browning  <rlb@defaultvalue.org>

	* debugger/breakpoints/Makefile.am (subpkgdatadir): VERSION ->
	GUILE_EFFECTIVE_VERSION.

	* debugger/Makefile.am (subpkgdatadir): VERSION ->
	GUILE_EFFECTIVE_VERSION.

	* Makefile.am (subpkgdatadir): VERSION -> GUILE_EFFECTIVE_VERSION.

2002-12-04  Mikael Djurfeldt  <mdj@linnaeus>

	* threads.scm (parallel): New macro.
	 (par-map, par-for-each): New procedures.

	* documentation.scm (object-documentation): Added support for
	defmacros.

2002-11-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>
